[gd_scene load_steps=9 format=3 uid="uid://b8ms30qxgl6mh"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_ojurb"]
[ext_resource type="Script" path="res://scenes/enemies/Healthbar.gd" id="8_quany"]

[sub_resource type="SpriteFrames" id="SpriteFrames_kwn2n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"fly",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"swim",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": null
}, {
"duration": 1.0,
"texture": null
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_l23aq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ed3k4"]
size = Vector2(40, 29)

[sub_resource type="Curve" id="Curve_nnlyv"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.175824), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_eqfwh"]
curve = SubResource("Curve_nnlyv")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nwyna"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 50.0
initial_velocity_max = 50.0
gravity = Vector3(0, 0, 0)
scale_min = 2.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_eqfwh")

[node name="enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 13
script = ExtResource("1_ojurb")
metadata/_edit_group_ = true

[node name="Base" type="Sprite2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_kwn2n")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_l23aq")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_ed3k4")

[node name="dmg_iframe_cooldown" type="Timer" parent="."]

[node name="Healthbar" type="ProgressBar" parent="."]
visible = false
offset_left = -13.0
offset_top = -20.0
offset_right = 16.0
offset_bottom = -15.0
step = 1.0
show_percentage = false
script = ExtResource("8_quany")

[node name="attack_cooldown" type="Timer" parent="."]

[node name="Poison" type="Node2D" parent="."]

[node name="poison_particles" type="GPUParticles2D" parent="Poison"]
modulate = Color(0.235294, 0.596078, 0.207843, 1)
position = Vector2(3.91928, -4.80862)
emitting = false
amount = 40
process_material = SubResource("ParticleProcessMaterial_nwyna")
lifetime = 0.5
one_shot = true
explosiveness = 1.0

[node name="poison_timer" type="Timer" parent="Poison"]

[connection signal="area_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_area_entered"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="dmg_iframe_cooldown" to="." method="_on_dmg_iframe_cooldown_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="Poison/poison_timer" to="." method="_on_poison_timer_timeout"]
